--- a/python_basics.ipynb
+++ b/python_basics.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "python_basics.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMylwuklyyPI0Icuwz4O6Hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,23 +19,37 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dhiyanesh23/Python/blob/main/python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QfyhmL-nRJyK",
-        "outputId": "7785c884-0c98-41af-abc9-269d19b1e3f5"
+        "outputId": "c5452d6f-3e96-40a7-e2c2-c336603143d2"
       },
       "source": [
-        "print(\"dhiyanesh\")  #print"
+        "print(\"dhiyanesh\")  #print\n",
+        "x = input(\"enter \")  #stdin\n",
+        "print(x)  #stdout"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "dhiyanesh\n"
+            "dhiyanesh\n",
+            "enter 23\n",
+            "23\n"
           ],
           "name": "stdout"
         }
@@ -46,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3QyvDp-fRbMB",
-        "outputId": "8bc824d0-6d9a-4d05-f118-abac5c5919fc"
+        "outputId": "136f2b0d-4e53-469f-8958-94b8e6997107"
       },
       "source": [
         "if 23 < 32:  #conditional statement\n",
@@ -134,11 +150,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dbjMaLBoSJd3",
-        "outputId": "53866667-afa1-4307-fc3c-33319dc75760"
+        "outputId": "aa4b8152-3714-4a20-9f79-df63ccbfec03"
       },
       "source": [
-        "x = str(23)  #casting\n",
-        "y = int(23.32)\n",
+        "x = str(23)  #typecasting\n",
+        "y = int(23.82)\n",
         "z = float(23)\n",
         "a = x + \"x\"\n",
         "print(x, y, z)\n",
@@ -163,18 +179,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s5UGZ5ZUSoOI",
-        "outputId": "ae5fede7-c898-4af1-bab4-5edaab58a294"
+        "outputId": "3d87aa83-6e2c-4d0b-cb52-e4263df52940"
       },
       "source": [
         "x = \"dhi\"  #type\n",
-        "print(type(x))"
+        "print(type(x))\n",
+        "print(isinstance(x, str))"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "<class 'str'>\n"
+            "<class 'str'>\n",
+            "True\n"
           ],
           "name": "stdout"
         }
@@ -317,23 +335,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f1oT4ApTAcyW",
-        "outputId": "23bc3d3c-cc49-4e5a-d9ec-ad27078b08a3"
+        "outputId": "0f86fb8f-b530-4ad2-f819-48302ff17a95"
       },
       "source": [
         "for a in \"qwerty\":  #looping through a string\n",
-        "  print(a)"
+        "  print(a, end = \"\")"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "q\n",
-            "w\n",
-            "e\n",
-            "r\n",
-            "t\n",
-            "y\n"
+            "qwerty"
           ],
           "name": "stdout"
         }
@@ -350,7 +363,6 @@
       },
       "source": [
         "s = \"asdfg\"\n",
-        "print(len(s))  #length\n",
         "print(s[4])    #indexing\n",
         "print(s[-5])\n",
         "print(s[0:3])  #slicing\n",
@@ -406,11 +418,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "67d26082-52aa-4bf1-ff66-9beb6f3b09e4"
+        "outputId": "fd3fd519-cd79-4528-d8ae-07585dd6b393"
       },
       "source": [
         "#string methods\n",
         "s = \"is qweRTY,zxc  \"\n",
+        "print(len(s))  #length\n",
         "print(s.upper())\n",
         "print(s.lower())\n",
         "print(s.isupper())\n",
@@ -420,7 +433,8 @@
         "print(s.rstrip())  #by default removes spaces\n",
         "print(s.replace(\"q\", \"a\"))\n",
         "print(s.split( ))  #by default split by spaces\n",
-        "print(s.split(\",\"))"
+        "print(s.split(\",\"))\n",
+        "print(type(s.split()))"
       ],
       "execution_count": null,
       "outputs": [
@@ -436,7 +450,8 @@
             "is qweRTY,zxc\n",
             "is aweRTY,zxc  \n",
             "['is', 'qweRTY,zxc']\n",
-            "['is qweRTY', 'zxc  ']\n"
+            "['is qweRTY', 'zxc  ']\n",
+            "<class 'list'>\n"
           ],
           "name": "stdout"
         }
@@ -572,7 +587,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A6xzQm-Y-TFE",
-        "outputId": "85953d33-76ca-4642-8f55-ad23433b5b19"
+        "outputId": "115f62bf-590c-40e5-994d-30deab092ab8"
       },
       "source": [
         "#boolean in function\n",
@@ -584,8 +599,8 @@
         "else:\n",
         "  print(\"no\")\n",
         "\n",
-        "x = 12\n",
-        "print(isinstance(x,int))  #built-in function"
+        "x = 0\n",
+        "print(isinstance(x,str))  #built-in function"
       ],
       "execution_count": null,
       "outputs": [
@@ -594,7 +609,7 @@
           "text": [
             "True\n",
             "yes\n",
-            "True\n"
+            "False\n"
           ],
           "name": "stdout"
         }
@@ -667,14 +682,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRLu5dJsEWju",
-        "outputId": "5d275e5e-3b43-4ac7-8595-5e8d3c5b75ef"
+        "outputId": "0d4d8513-74cc-496a-e6dd-c70c74b55a0d"
       },
       "source": [
         "#lists\n",
         "l = [\"12\", 2, 3, 4, 2]\n",
         "print(l.index(2))\n",
         "print(l.count(2))\n",
-        "print(list(\"string\"))\n",
+        "print(list(\"string\"))  #string to list\n",
+        "\n",
+        "ls = list(\"string - list\")  #list to string\n",
+        "print(ls)\n",
+        "s = \"\"\n",
+        "for i in ls:\n",
+        "  s = s + i\n",
+        "print(s)\n",
+        "\n",
         "if 2 in l:\n",
         "  print(\"present\")\n",
         "l[0:1] = [\"23\", \"21\"]\n",
@@ -690,6 +713,8 @@
             "1\n",
             "2\n",
             "['s', 't', 'r', 'i', 'n', 'g']\n",
+            "['s', 't', 'r', 'i', 'n', 'g', ' ', '-', ' ', 'l', 'i', 's', 't']\n",
+            "string - list\n",
             "present\n",
             "['23', '21', 2, 3, 4, 2]\n",
             "['23', 'one', 3, 4, 2]\n"
@@ -764,7 +789,7 @@
         "thisList = [1, 3, 5]\n",
         "myList = thisList.copy()  #way1\n",
         "print(myList)\n",
-        "myList2 = list(thisList)\n",
+        "myList2 = list(thisList)  #way2\n",
         "print(myList2)"
       ],
       "execution_count": null,
@@ -786,7 +811,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zGfcz9OPYd3",
-        "outputId": "410330af-5269-401f-a7f5-7311f4ed95e5"
+        "outputId": "d07d4005-f680-4b33-9669-bcef140e2417"
       },
       "source": [
         "#loop through a ist\n",
@@ -817,7 +842,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3wPS7TISEFT",
-        "outputId": "74c97e59-8da7-4f50-84b0-c4944ee889db"
+        "outputId": "63270d43-158d-4e7b-b37c-5e45ec1a7c01"
       },
       "source": [
         "#list comprehension\n",
@@ -825,7 +850,9 @@
         "[print(x, end = \" \") for x in thisList]\n",
         "print(\"\\n\")\n",
         "newList = [x for x in thisList if x%2 == 0]\n",
-        "print(newList, end = \" \")"
+        "print(newList, end = \" \")\n",
+        "newList1 = [input(x) for x in range(2)]\n",
+        "print(newList1)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -834,7 +861,11 @@
           "text": [
             "1 2 3 4 \n",
             "\n",
-            "[2, 4] "
+            "[2, 4] 01\n",
+            "123\n",
+            "['01', '23']\n",
+            "3 4\n",
+            "3 4\n"
           ],
           "name": "stdout"
         }
@@ -1093,7 +1124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlghGKQzHc6L",
-        "outputId": "793c7a9b-bf90-43f8-b275-944955c45d23"
+        "outputId": "8a8a6307-6e3c-476f-ee81-a134ebf3f61c"
       },
       "source": [
         "#dictionaries\n",
@@ -1412,7 +1443,7 @@
         "    result = k + tri_recursion(k-1)\n",
         "    print(result)\n",
         "  else:\n",
-        "    result = 0\n",
+        "    result = 0   #base condition\n",
         "  return result\n",
         "print(tri_recursion(4))\n",
         "\n",
@@ -1443,13 +1474,186 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HBp03yRV25ED"
+        "id": "HBp03yRV25ED",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc2ce756-d1ef-49a1-8fcb-a8ba9d7cd8fc"
       },
       "source": [
-        ""
+        "#exception handling\n",
+        "try:  #test a block of code for errors\n",
+        "  #x = 1/0\n",
+        "  #print(a)\n",
+        "  print(\"noError\")\n",
+        "except ZeroDivisionError:  #handle the error\n",
+        "  print(\"zero division error\")\n",
+        "except NameError:\n",
+        "  print(\"variable not defined\")\n",
+        "except:\n",
+        "  print(\"something went wrong\")\n",
+        "else:  # if no errors were raised\n",
+        "  print(\"success\")\n",
+        "finally:  #executed regardless if the try block raises an error or not\n",
+        "  print(\"try and except block is finished\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "noError\n",
+            "success\n",
+            "try and except block is finished\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "id": "23Vh2iIklvr4",
+        "outputId": "aaa09e57-f0de-4afa-c8bc-f66157f594c3"
+      },
+      "source": [
+        "#raise\n",
+        "x = -9\n",
+        "if x < 0:\n",
+        "  ####raise Exception(\"not applicable\")  \n",
+        "  #raise an error and stop the program "
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "Exception",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-2cfc953b64e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"not applicable\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mException\u001b[0m: not applicable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h0UA3DwDse55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "52de2b8e-8de7-4146-9dc4-d0cce1358336"
+      },
+      "source": [
+        "#recursion\n",
+        "def fact(n):\n",
+        "  if n == 0:\n",
+        "    return 1     #base condition\n",
+        "  else:\n",
+        "    return(n*fact(n-1))\n",
+        "print(fact(5))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7JSvJEikpwaX"
+      },
+      "source": [
+        "#extracrunch\n",
+        "inp = list(map(int,input().split()))  #multiple inputs separated by space\n",
+        "inp1, inp2 = input(), input()  #two inputs separated by enter\n",
+        "inp3, inp4 = input().split()  #two inputs separated by space\n",
+        "print(inp)\n",
+        "print(inp1, inp2, inp3, inp4)\n",
+        "print(id(inp1))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PDzOQDvZsXET",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6bd63e8a-0713-4ce7-a9a3-fb1b8ffcbbf9"
+      },
+      "source": [
+        "#practice\n",
+        "l = []\n",
+        "n = int(input(\"enter \"))\n",
+        "for i in range(n):\n",
+        "    ele = int(input())\n",
+        "    l.append(ele)\n",
+        "pos = int(input())\n",
+        "ele = int(input())\n",
+        "l.insert(pos-1, ele)\n",
+        "print(l)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter 3\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sq1YlYrGqBDc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a761d49-9d06-41f7-8d62-a8a99a9000ca"
+      },
+      "source": [
+        "\"\"\"\n",
+        "__name__ is a special variable\n",
+        "__name__ == \"__main__\" serves as the entry point of a program\n",
+        "If the python interpreter is running that module (the source file) as the main program, it sets the special __name__ variable to have a value “__main__”. \n",
+        "If this file is being imported from another module, __name__ will be set to the module’s name.\n",
+        "\"\"\"\n",
+        "def put():\n",
+        "  print(\"put func\")\n",
+        "if __name__ == \"__main__\":\n",
+        "  put()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "put func\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
